kubernetes/preset.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
