kubernetes/cadvisor.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor
  namespace: monitoring
  labels:
    app: cadvisor
spec:
  selector:
    matchLabels:
      app: cadvisor
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"      
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: cadvisor 
        image: registry.cn-guangzhou.aliyuncs.com/orionbonnie/cadvisor:v1
        ports:
        - containerPort: 8080
        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
        livenessProbe:
          tcpSocket:
            port: 8080
        resources:
          requests:
            cpu: 150m
            memory: 200M
          limits:
            cpu: 250m
            memory: 200M
        volumeMounts:
        - name: root
          mountPath: /rootfs
          mountPropagation: HostToContainer
          readOnly: true
        - name: proc
          mountPath: /proc
        - name: sys
          mountPath: /sys
        - name: run
          mountPath: /var/run
        - name: containerd
          mountPath: /var/lib/containerd
        - name: docker
          mountPath: /var/lib/docker
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: run
        hostPath:
          path: /var/run
      - name: containerd
        hostPath:
          path: /var/lib/containerd
      - name: docker
        hostPath:
          path: /var/lib/docker
      - name: sys
        hostPath:
          path: /sys
      - name: root
        hostPath:
          path: /
