kubernetes/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: node-exporter
        image: registry.cn-guangzhou.aliyuncs.com/orionbonnie/node_exporter:v1
        ports:
        - containerPort: 9100
        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
        livenessProbe:
          tcpSocket:
            port: 9100
        resources:
          requests:
            cpu: 150m
            memory: 200M
          limits:
            cpu: 250m
            memory: 200M
        volumeMounts:
        - name: proc
          mountPath: /metrics/procfs
        - name: dev
          mountPath: /dev
        - name: sys
          mountPath: /metrics/sysfs
        - name: root
          mountPath: /metrics/rootfs
          mountPropagation: HostToContainer
          readOnly: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: dev
        hostPath:
          path: /dev
      - name: sys
        hostPath:
          path: /sys
      - name: root
        hostPath:
          path: /
