kubernetes/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus-sa
      nodeSelector:
        node-role.kubernetes.io/monitoring: prometheus
      containers:
      - name: prometheus
        image: registry.cn-guangzhou.aliyuncs.com/orionbonnie/prometheus:v2
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 512M
          limits:
            cpu: 300m
            memory: 800M
        livenessProbe:
          tcpSocket:
            port: 9090
        readinessProbe:
          tcpSocket:
            port: 9090
        volumeMounts:
        - mountPath: /opt/data
          name: prometheus-data
        - mountPath: /opt/rules
          name: prometheus-rule
        - mountPath: /opt/config
          name: prometheus-config
      volumes:
      - name: prometheus-config
        configMap:
          name: prom-config-main
          items:
          - key: config_data
            path: prometheus.yml
      - name: prometheus-rule
        configMap:
          name: prom-config-rule
          items:
          - key: config_data
            path: instance_down.yaml
      - name: prometheus-data
        hostPath:
          path: /data/prometheus-data
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: monitoring
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    app: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: www.prometheus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
